--- a/final/conclusions.tex
+++ b/final/conclusions.tex
@@ -44,6 +44,6 @@ time to produce a solution, which was well under the one minute requirement.
 
 However, it was found in \sectionname~\ref{sec:sub:example} that there are some graphs where the proposed and the
 Christofides/Wang algorithms have a performance advantage.  Nevertheless, it must be admitted that Chistofides/Wang
-is a much simpler algorithm, and that the various steps in the proposed algorithm don't seem to deliver a decisive
+is a much simpler algorithm, and that the various steps in the proposed algorithm do not seem to deliver a decisive
 performance advantage over the target range.  Thus, the simplicity of Christofides/Wang makes it a better choice
 for the desired design tool.
