--- a/final/design.tex
+++ b/final/design.tex
@@ -221,7 +221,7 @@ the FRs or by adding additional DPs.
 Unfortunately, adding additional DPs runs counter to the second axiom: the information axiom~\cite{suh}.
 
 \begin{axiom}[The Information Axiom]
-  The best design is a functionally uncoupled design that has the minimum information content.
+  The best design is an uncoupled design that has the minimum information content.
 \end{axiom}
 
 The amount of \emph{information} contained in a particular DP is inversely related to the probability that the DP
